# variational-autoencoder

./: README.md  requirements.txt  setup.cfg
tests/: mnist.py
variational_autoencoder/: __init__.py  __main__.py  dashboard.py  model.py  utilities.py
