[metadata]
name = variational-autoencoder
version = 1.0.0
description = Variationl AutoEncoder implementation using Pytorch
author = Thomas Hirtz
url = https://github.com/thomashirtz/variational-autoencoder

[options]
install_requires =
    torch
    numpy
    pathlib2
packages = find:

[options.packages.find]
exclude = tests*
